<resources>
    <string name="app_name">Media Player</string>

    <string name="title">This is the title of Song</string>

    <string name="permissionDialog">This app needs storage permission to access your media files.that you have denied. please allow storage permission from settings to proceed further.</string>

    <string name="min_5">5 Minutes</string>
    <string name="min_10">10 Minutes</string>
    <string name="min_15">15 Minutes</string>
    <string name="min_30">30 Minutes</string>
    <string name="min_45">45 Minutes</string>
    <string name="min_60">60 Minutes</string>
    <string name="set_timer">Set Timer</string>


    <string name="song_img">Song Image</string>
    <string name="playlist_name">Playlist Name</string>
    <string name="playlist_delete">Delete</string>

    <string name="nav_open">Open Navigation Drawer</string>
    <string name="nav_close">Close Navigation Drawer</string>
    <string name="todo">TODO</string>


    <!--      font-Array      -->
    <string-array name="font_options">
        <item>Font1</item>
        <item>Font2</item>
        <item>Font3</item>
        <item>Font4</item>
        <item>Font5</item>
        <item>Font6</item>
        <item>Font7</item>
        <item>Font8</item>
        <item>Font9</item>
        <item>Font10</item>
        <item>Font11</item>
        <!-- Add more font options as needed -->
    </string-array>


</resources>