<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="15dp"
    app:strokeWidth="2dp"
    android:layout_margin="10dp"
    app:strokeColor="?attr/themeColor">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/playlistImage"
        android:layout_width="170dp"
        android:layout_height="130dp"
        android:padding="5dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/music_logo"
        app:shapeAppearanceOverlay="@style/SoftCorner"
        android:contentDescription="@string/song_img"/>

    <TextView
        android:id="@+id/playlistName"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:layout_marginTop="130dp"
        android:paddingHorizontal="5dp"
        android:gravity="center"
        android:ellipsize="marquee"
        android:marqueeRepeatLimit="marquee_forever"
        android:singleLine="true"
        android:text="@string/playlist_name"
        android:textSize="18sp"
        android:background="@null"
        style="@style/MyTextViewStyle"
        android:contentDescription="@string/playlist_name"/>

    <ImageButton
        android:id="@+id/playlistDeleteButton"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginTop="130dp"
        android:layout_marginStart="130dp"
        android:backgroundTint="@android:color/transparent"
        android:src="@drawable/playlist_delete_icon"
        app:tint="?attr/themeColor"
        android:contentDescription="@string/playlist_delete"/>



</com.google.android.material.card.MaterialCardView>